--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -1,175 +1,324 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g_L7s5ZnSYx1"
+      },
+      "source": [
+        "___\n",
+        "\n",
+        "<a href='https://www.udemy.com/user/joseportilla/'><img src='https://github.com/joemaxwell-jbm/Complete-Python-3-Bootcamp/blob/master/Pierian_Data_Logo.png?raw=1'/></a>\n",
+        "___\n",
+        "<center><em>Content Copyright by Pierian Data</em></center>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dyqlzSzOSYx4"
+      },
+      "source": [
+        "# Guessing Game Challenge\n",
+        "\n",
+        "Let's use `while` loops to create a guessing game.\n",
+        "\n",
+        "The Challenge:\n",
+        "\n",
+        "Write a program that picks a random integer from 1 to 100, and has players guess the number. The rules are:\n",
+        "\n",
+        "1. If a player's guess is less than 1 or greater than 100, say \"OUT OF BOUNDS\"\n",
+        "2. On a player's first turn, if their guess is\n",
+        " * within 10 of the number, return \"WARM!\"\n",
+        " * further than 10 away from the number, return \"COLD!\"\n",
+        "3. On all subsequent turns, if a guess is\n",
+        " * closer to the number than the previous guess return \"WARMER!\"\n",
+        " * farther from the number than the previous guess, return \"COLDER!\"\n",
+        "4. When the player's guess equals the number, tell them they've guessed correctly *and* how many guesses it took!\n",
+        "\n",
+        "You can try this from scratch, or follow the steps outlined below. A separate Solution notebook has been provided. Good luck!\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xUPJW5DgSYx4"
+      },
+      "source": [
+        "#### First, pick a random integer from 1 to 100 using the random module and assign it to a variable\n",
+        "\n",
+        "Note: `random.randint(a,b)` returns a random integer in range `[a, b]`, including both end points."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "collapsed": true,
+        "id": "JrCVbaQfSYx5"
+      },
+      "outputs": [],
+      "source": [
+        "import random\n",
+        "num = random.randint(1,100)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LiZ_p1XVSYx5"
+      },
+      "source": [
+        "#### Next, print an introduction to the game and explain the rules"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f106e779",
+        "outputId": "42d32320-bf09-483d-d253-8b08e7fb6e17"
+      },
+      "source": [
+        "print(\"Welcome to the Guessing Game!\")\n",
+        "print(\"I'm thinking of a number between 1 and 100.\")\n",
+        "print(\"Try to guess it!\")\n",
+        "print(\"If your guess is more than 10 away from my number, I'll tell you you're COLD\")\n",
+        "print(\"If your guess is within 10 of my number, I'll tell you you're WARM\")\n",
+        "print(\"If your guess is closer than your previous guess, I'll tell you you're WARMER\")\n",
+        "print(\"If your guess is farther than your previous guess, I'll tell you you're COLDER\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Welcome to the Guessing Game!\n",
+            "I'm thinking of a number between 1 and 100.\n",
+            "Try to guess it!\n",
+            "If your guess is more than 10 away from my number, I'll tell you you're COLD\n",
+            "If your guess is within 10 of my number, I'll tell you you're WARM\n",
+            "If your guess is closer than your previous guess, I'll tell you you're WARMER\n",
+            "If your guess is farther than your previous guess, I'll tell you you're COLDER\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "93a26fa2"
+      },
+      "source": [
+        "# guesses = [0]"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aV_qH4ppSYx5"
+      },
+      "source": [
+        "#### Create a list to store guesses\n",
+        "\n",
+        "Hint: zero is a good placeholder value. It's useful because it evaluates to \"False\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "V9N-b2sBSYx5"
+      },
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OfKBWfsLSYx6"
+      },
+      "source": [
+        "#### Write a `while` loop that asks for a valid guess. Test it a few times to make sure it works."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "guess = 0\n",
+        "while guess != num:\n",
+        "  guess = input(\"What is your guess between 1 and 100?\")\n",
+        "  if isinstance(guess, int) == False:\n",
+        "    print(\"NOT AN INTEGER!\")\n",
+        "  elif guess < 1 or guess > 100:\n",
+        "    print(\"OUT OF BOUNDS!\")"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 543
+        },
+        "id": "qSqslnByUU2A",
+        "outputId": "dafaa641-cb7c-4d3a-938d-c1c3c33ffe53"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your guess between 1 and 100?5.4\n",
+            "NOT AN INTEGER!\n",
+            "What is your guess between 1 and 100?1\n",
+            "NOT AN INTEGER!\n",
+            "What is your guess between 1 and 100?0\n",
+            "NOT AN INTEGER!\n",
+            "What is your guess between 1 and 100?515\n",
+            "NOT AN INTEGER!\n",
+            "What is your guess between 1 and 100?break\n",
+            "NOT AN INTEGER!\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1081164502.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mguess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mguess\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mguess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"What is your guess between 1 and 100?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mguess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"NOT AN INTEGER!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yTAflXd9SYx8"
+      },
+      "source": [
+        "#### Write a `while` loop that compares the player's guess to our number. If the player guesses correctly, break from the loop. Otherwise, tell the player if they're warmer or colder, and continue asking for guesses.\n",
+        "\n",
+        "Some hints:\n",
+        "* it may help to sketch out all possible combinations on paper first!\n",
+        "* you can use the `abs()` function to find the positive difference between two numbers\n",
+        "* if you append all new guesses to the list, then the previous guess is given as `guesses[-2]`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = random.randint(1,100)\n",
+        "print(num)\n",
+        "guess = int(0)\n",
+        "diffs = []\n",
+        "count = -1\n",
+        "while guess != num:\n",
+        "  guess = int(input(\"What is your guess between 1 and 100?\"))\n",
+        "  diffs.append(abs(guess - num))\n",
+        "  count += 1\n",
+        "  if isinstance(guess, int) == False:\n",
+        "    print(\"NOT AN INTEGER!\")\n",
+        "    break\n",
+        "  elif guess < 1 or guess > 100:\n",
+        "    print(\"OUT OF BOUNDS!\")\n",
+        "  elif diffs[count] == 0:\n",
+        "    print(f'CORRECT! It took you {count} guesses!')\n",
+        "  elif count >= 2:\n",
+        "    if diffs[-1] < diffs[-2]:\n",
+        "      print('WARMER!')\n",
+        "    else:\n",
+        "      print('COLDER!')\n",
+        "  elif diffs[count] > 10:\n",
+        "    print('COLD!')\n",
+        "  elif diffs[count] <= 10:\n",
+        "    print('WARM!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mJ6VB8hjVRuz",
+        "outputId": "3b2546d8-0431-4a8c-af45-f6841695afc2"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "67\n",
+            "What is your guess between 1 and 100?12\n",
+            "COLD!\n",
+            "What is your guess between 1 and 100?34\n",
+            "COLD!\n",
+            "What is your guess between 1 and 100?45\n",
+            "WARMER!\n",
+            "What is your guess between 1 and 100?69\n",
+            "WARMER!\n",
+            "What is your guess between 1 and 100?70\n",
+            "COLDER!\n",
+            "What is your guess between 1 and 100?68\n",
+            "WARMER!\n",
+            "What is your guess between 1 and 100?67\n",
+            "CORRECT! It took you 6 guesses!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "48ouOxXzSYx9"
+      },
+      "source": [
+        "That's it! You've just programmed your first game!\n",
+        "\n",
+        "In the next section we'll learn how to turn some of these repetitive actions into *functions* that can be called whenever we need them."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_51_sjzHSYx9"
+      },
+      "source": [
+        "### Good Job!"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.6"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Guessing Game Challenge\n",
-    "\n",
-    "Let's use `while` loops to create a guessing game.\n",
-    "\n",
-    "The Challenge:\n",
-    "\n",
-    "Write a program that picks a random integer from 1 to 100, and has players guess the number. The rules are:\n",
-    "\n",
-    "1. If a player's guess is less than 1 or greater than 100, say \"OUT OF BOUNDS\"\n",
-    "2. On a player's first turn, if their guess is\n",
-    " * within 10 of the number, return \"WARM!\"\n",
-    " * further than 10 away from the number, return \"COLD!\"\n",
-    "3. On all subsequent turns, if a guess is \n",
-    " * closer to the number than the previous guess return \"WARMER!\"\n",
-    " * farther from the number than the previous guess, return \"COLDER!\"\n",
-    "4. When the player's guess equals the number, tell them they've guessed correctly *and* how many guesses it took!\n",
-    "\n",
-    "You can try this from scratch, or follow the steps outlined below. A separate Solution notebook has been provided. Good luck!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### First, pick a random integer from 1 to 100 using the random module and assign it to a variable\n",
-    "\n",
-    "Note: `random.randint(a,b)` returns a random integer in range `[a, b]`, including both end points."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Next, print an introduction to the game and explain the rules"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create a list to store guesses\n",
-    "\n",
-    "Hint: zero is a good placeholder value. It's useful because it evaluates to \"False\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Write a `while` loop that asks for a valid guess. Test it a few times to make sure it works."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    \n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Write a `while` loop that compares the player's guess to our number. If the player guesses correctly, break from the loop. Otherwise, tell the player if they're warmer or colder, and continue asking for guesses.\n",
-    "\n",
-    "Some hints:\n",
-    "* it may help to sketch out all possible combinations on paper first!\n",
-    "* you can use the `abs()` function to find the positive difference between two numbers\n",
-    "* if you append all new guesses to the list, then the previous guess is given as `guesses[-2]`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "\n",
-    "    # we can copy the code from above to take an input\n",
-    "\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That's it! You've just programmed your first game!\n",
-    "\n",
-    "In the next section we'll learn how to turn some of these repetitive actions into *functions* that can be called whenever we need them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Good Job!"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
